07-Kubernetes/09-homework/manifests/networkpolicy/backend-to-cache.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-cache
  namespace: app

spec:
  podSelector:
    matchLabels:
      app: cache

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend

  policyTypes:
    - Ingress
