07-Kubernetes/09-homework/manifests/networkpolicy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: app

spec:
  podSelector: {}

  policyTypes:
    - Ingress
