07-Kubernetes/09-homework/manifests/networkpolicy/frontend-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-backend
  namespace: app

spec:
  podSelector:
    matchLabels:
      app: backend

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend

  policyTypes:
    - Ingress
